src/test/ui/borrowck/borrowck-move-moved-value-into-closure.ast.stderr
error[E0382]: capture of moved value: `t`
  --> $DIR/borrowck-move-moved-value-into-closure.rs:14:22
   |
LL |     call_f(move|| { *t + 1 });
   |            ------ value moved (into closure) here
LL |     call_f(move|| { *t + 1 });
   |                      ^ value captured here after move
   |
   = note: move occurs because `t` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
